# server/swagger.yaml
@@ -5,11 +5,6 @@ info:
     This API provides programmatic access to a vast collection of merchandise related to the popular game League of Legends.
     Integrate this API into your application to offer users a convenient way to browse, search, and potentially purchase officially licensed League of Legends merchandise.
 
-    This API is created to support 2 languages ['en-us', 'fr'] for now.
-    Get US products: url**?language=en-us**.
-    Get FR products: url**?language=fr**.
-    See more about this in **Products - GET - /api/v1/products**
-
   contact:
     email: nhockkutean2@gmail.com
   version: 1.0.0
@@ -56,18 +51,22 @@ paths:
                     type: string
                     description: The message containing information about the API creator.
                     example: 'This API is created by Trần Nhật Kỳ. Contact: nhockkutean2@gmail.com'
-  /hello-world:
+
+  /language:
     get:
       tags:
         - Information
-      summary: Get Hello World message
+      summary: Get current language
       description: |
-        Returns a JSON response with a message saying "Hello World".
-        Used to check if server is alive.
-      operationId: helloWorld
+        Returns the current language setting (This API is created to support 2 languages ['en-us', 'fr'] for now).
+        There a midlleware to control language, language can be changed using query:
+        **?language=en-us** | **?language=fr**
+      operationId: language
+      parameters:
+        - $ref: '#/components/parameters/LanguageQuery'
       responses:
         '200':
-          description: Successful response
+          description: Successful response with the current language
           content:
             application/json:
               schema:
@@ -75,10 +74,23 @@ paths:
                 properties:
                   status:
                     $ref: '#/components/schemas/SuccessMessage'
+                  language:
+                    type: string
+                    description: The current language setting.
+                    example: en-us
+        '400':
+          description: Bad request - Language is not supported!
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    $ref: '#/components/schemas/FailMessage'
                   message:
                     type: string
-                    description: The Hello World message.
-                    example: Hello World!
+                    description: The error message explaining why the request failed.
+                    example: Language 'language' is not supported!
 
   # Metadata ##########
 
@@ -92,13 +104,8 @@ paths:
       description: Returns a list of products with detailed information.
       operationId: getAllProducts
       parameters:
-        - in: query
-          name: language
-          schema:
-            type: string
-            example: en-us
-          required: false
-          description: The language (en-us | fr) of products to return. **en-us** is the default value.
+        - $ref: '#/components/parameters/LanguageQuery'
+        - $ref: '#/components/parameters/AdvancedFilteringQuery'
       responses:
         '200':
           description: Successful response
@@ -118,21 +125,85 @@ paths:
                     description: A list of products.
                     items:
                       $ref: '#/components/schemas/Product'
-        '400':
-          description: Bad Request
+        '500':
+          $ref: '#/components/responses/ServerError'
+
+  /api/v1/products/{productID}:
+    get:
+      tags:
+        - Products
+      summary: Get product by ID
+      description: Returns detailed information about a specific product by its ID.
+      operationId: getProduct
+      parameters:
+        - $ref: '#/components/parameters/LanguageQuery'
+        - $ref: '#/components/parameters/ProjectQuery'
+        - $ref: '#/components/parameters/ProductIDParam'
+      responses:
+        '200':
+          description: Successful response with product details
           content:
             application/json:
               schema:
                 type: object
                 properties:
                   status:
-                    $ref: '#/components/schemas/FailMessage'
-                  message:
-                    type: string
-                    description: The error message explaining why the request failed.
-                    example: Language 'language' is not supported!
+                    $ref: '#/components/schemas/SuccessMessage'
+                  language:
+                    $ref: '#/components/schemas/Language'
+                  numResults:
+                    $ref: '#/components/schemas/NumResults'
+                  products:
+                    $ref: '#/components/schemas/Product'
+        '404':
+          $ref: '#/components/responses/NotFound'
+        '500':
+          $ref: '#/components/responses/ServerError'
 
-# Advanced Filtering
+  /api/v1/products/top-5-cheap:
+    get:
+      tags:
+        - Products
+      summary: Get the top 5 cheap products
+      description: Returns a list of the top 5 cheapest products available.
+      operationId: top5Cheap
+      parameters:
+        - $ref: '#/components/parameters/LanguageQuery'
+        - in: query
+          name: additions
+          description: |
+            Advanced filtering, sorting, projecting, pagination.
+
+            Filtering: { "name": "Jimei Palace Aatrox 1/6 Scale Statue" }
+
+            Projecting: { "fields": "name,price" }
+          required: false
+          schema:
+            type: object
+            additionalProperties: true
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    $ref: '#/components/schemas/SuccessMessage'
+                  language:
+                    $ref: '#/components/schemas/Language'
+                  numResults:
+                    $ref: '#/components/schemas/NumResults'
+                  products:
+                    type: array
+                    description: A list of products.
+                    items:
+                      $ref: '#/components/schemas/Product'
+        '500':
+          $ref: '#/components/responses/ServerError'
+
+# Add Technologies description
 
 components:
   schemas:
@@ -146,6 +217,11 @@ components:
       description: The status of the response.
       example: fail
 
+    ErrorMessage:
+      type: string
+      description: The status of the response.
+      example: error
+
     Language:
       type: string
       description: The language of the response.
@@ -153,7 +229,7 @@ components:
 
     NumResults:
       type: integer
-      description: The number of items returned.
+      description: The number of entities returned.
       example: 1
 
     Product:
@@ -325,3 +401,74 @@ components:
           format: date-time
           description: The date and time when the product was last updated.
           example: 2024-05-10T14:35:35.535Z
+
+  parameters:
+    LanguageQuery:
+      in: query
+      name: language
+      description: The language (**en-us** | **fr**) of entities to return. **en-us** is the default value.
+      required: false
+      schema:
+        type: string
+
+    AdvancedFilteringQuery:
+      in: query
+      name: additions
+      description: |
+        Advanced filtering, sorting, projecting, pagination.
+
+        Filtering: { "name": "Jimei Palace Aatrox 1/6 Scale Statue" }
+
+        Sorting: { "sort": "price.default" }
+
+        Projecting: { "fields": "name,price" }
+
+        Pagination: { "page": 1, "limit": 3 }
+      required: false
+      schema:
+        type: object
+        additionalProperties: true
+
+    ProjectQuery:
+      in: query
+      name: fields
+      description: Project the fields of entity (filed="name").
+      required: false
+      schema:
+        type: string
+
+    ProductIDParam:
+      in: path
+      name: productID
+      description: The unique identifier of the product.
+      required: true
+      schema:
+        type: string
+
+  responses:
+    NotFound:
+      description: Not Found
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              status:
+                $ref: '#/components/schemas/FailMessage'
+              message:
+                type: string
+                description: The error message explaining that the entity was not found.
+                example: Entity not found!
+
+    ServerError:
+      description: Internal Server Error
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              status:
+                $ref: '#/components/schemas/ErrorMessage'
+              message:
+                type: string
+                example: Something went wrong!
